# python-lzo

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTORS.md  MANIFEST.in  Makefile  NEWS  README.md  appveyor.yml  lzomodule.c  pyproject.toml  setup.py  tarxfz.py  tox.ini
.github/workflows/: build-linux.yml  build-macos-brew.yml  build-macos.yml  build-windows.yml  release.yml  tests.yaml  wheels.yml
lzo-2.10/: CMakeLists.txt
tests/: test.py  test_lzo.py  util.py
