[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "pybind11>=2.6.0",
    "cmake>=3.15",
    "ninja; platform_system!='Windows'"
]
build-backend = "setuptools.build_meta"

[project]
name = "python-lzo"
version = "1.16"
description = "Python bindings for the LZO compression library"
authors = [
    {name = "Markus F.X.J. Oberhumer", email = "markus@oberhumer.com"}
]
maintainers = [
    {name = "Joshua D. Boyd", email = "jdboyd@jdboyd.net"},
]
readme = "README.md"
license = "GPL-2.0"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Compression",
]
keywords = ["lzo", "compression"]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
]
test = [
    "pytest>=6.0",
]

[project.urls]
Homepage = "https://github.com/jd-boyd/python-lzo"
Repository = "https://github.com/jd-boyd-lzo"
Issues = "https://github.com/jd-boyd-lzo/issues"

[tool.setuptools]
packages = []  # No Python packages, just C extension

[tool.setuptools.package-data]
"*" = ["*.so", "*.pyd", "*.dll"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
